--- a/pages/package/[...packageString]/ResultPage.scss
+++ b/pages/package/[...packageString]/ResultPage.scss
@@ -261,7 +261,7 @@
 
 .treemap {
   @include font-size-sm;
-  color: var(--color-treemap-text);
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .treemap__square {
@@ -270,7 +270,7 @@
 
   &:hover {
     z-index: 1;
-    color: var(--color-treemap-text-hover);
+    color: rgba(0, 0, 0, 0.8);
     filter: brightness(105%);
   }
 }
@@ -303,10 +303,10 @@
   display: block;
   font-weight: $font-weight-bold;
   letter-spacing: -1px;
-  color: var(--color-treemap-percent);
+  color: rgba(0, 0, 0, 0.5);
 
   .treemap__square:hover & {
-    color: var(--color-treemap-percent-hover);
+    color: rgba(0, 0, 0, 0.8);
   }
 
   mix-blend-mode: soft-light;
@@ -322,7 +322,7 @@
 }
 
 .treemap__ellipsis {
-  color: var(--color-treemap-ellipsis);
+  color: rgba(0, 0, 0, 0.35);
 }
 
 .treemap__note {
